--- a/sdkjs-plugins/content/pluginastab/index.html
+++ b/sdkjs-plugins/content/pluginastab/index.html
@@ -21,7 +21,7 @@
     <script type="text/javascript" src="https://onlyoffice.github.io/sdkjs-plugins/v1/plugins.js"></script>
     <script type="text/javascript" src="https://onlyoffice.github.io/sdkjs-plugins/v1/plugins-ui.js"></script>
     <link rel="stylesheet" href="https://onlyoffice.github.io/sdkjs-plugins/v1/plugins.css">
-    <script type="text/javascript" src="scripts/helloworld.js"></script>
+    <script type="text/javascript" src="scripts/code.js"></script>
 </head>
 <body>
 </body>
